# RestApiStore

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: biuld.yml  build.yml  github-action-demo.yml  github-actions-demo.yml  github-actions-demoo.yml  heroku-deploy.yml  workflow-pr.yml
RestApiStore/: README.md  asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
RestApiStore/.github/workflows/: biuld.yml  github-action-demo.yml
RestApiStore/order/viewsets/: order_viewset.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
order/tests/test_serializers/: test_order_serializers.py
order/tests/test_serializers/test_viewset/: test_order_viewset.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: __init__.py
product/: factories.py  tests.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: teste_product_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
