[tool.poetry]
name = "RestApiStore"
version = "0.1.0"
packages = [{ include = "RestApiStore" }]
description = "RestStore API"
authors = ["Thiago Carvalho <thiago.carvalho1991@hotmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.2.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-django (>=4.11.1,<5.0.0)"
]


